--- a/OnlineExamAPI/OnlineExamAPI/packages.config
+++ b/OnlineExamAPI/OnlineExamAPI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
