--- a/OnlineExamAPI/OnlineExamAPI/OnlineExamAPI.csproj
+++ b/OnlineExamAPI/OnlineExamAPI/OnlineExamAPI.csproj
@@ -145,6 +145,9 @@
     <Compile Include="Models\Student.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TestFile.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TestSubject.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
